Closed Bug 332499 Opened 19 years ago Closed 19 years ago

Misplaced listbox for floated <select>

Categories

(Core :: Layout: Floats, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: u60234, Assigned: marcldl+mozbugs)

References

Details

(Keywords: regression, testcase)

Attachments

(2 files)

Mozilla/5.0 (Windows; U; Windows NT 5.1; sv-SE; rv:1.9a1) Gecko/20060401 Firefox/1.6a1 The dropdown menu for a floated <select> opens in the wrong position. This happens with both cairo and non-cairo builds. Steps to reproduce: 1. Open the attached testcase. 2. Click on the select box. Actual result: The dropdown menu opens to the left. This regressed between builds 2006-03-26-07 and 2006-03-27-05. http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=PhoenixTinderbox&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2006-03-26+06%3A00%3A00&maxdate=2006-03-27+05%3A00%3A00&cvsroot=%2Fcvsroot
Attached file testcase
Keywords: testcase
Backing out the patch for bug 328946 doesn't help, so I guess this has to be a regression from bug 330934.
Status: UNCONFIRMED → NEW
Ever confirmed: true
This patch fixes the problem. I don't even know why I changed this in the patch for bug 330934.
Attachment #217053 - Flags: review?(roc)
Marc, you don't have cvs rights yet? Do you want me to check this in?
Blocks: 330934
Yes please.
Assignee: nobody → marcldl+mozbugs
Checking in layout/base/nsCSSFrameConstructor.cpp; /cvsroot/mozilla/layout/base/nsCSSFrameConstructor.cpp,v <-- nsCSSFrameConstru ctor.cpp new revision: 1.1216; previous revision: 1.1215 done
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
did this cause Bug 333590 ?
It shouldn't have since this is how the code was before bug 330934. But also I have a build with this change in it from yesterday which doesn't have bug 333590.
Depends on: 343510
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: