Bug 332499 - Misplaced listbox for floated select, patch by Marc Liddell, r+sr=roc